--- a/Rei.Presentation/Rei.Presentation.csproj
+++ b/Rei.Presentation/Rei.Presentation.csproj
@@ -17,4 +17,8 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\Rei.Infrastructure\Rei.Infrastructure.csproj" />
+    </ItemGroup>
+
 </Project>
